# vita2hos_

./: CMakeLists.txt  Makefile  build.sh  build_devkitpro.sh  cmake_install.cmake
cmake/: FindDevkitPro.cmake  FindVitaSDK.cmake  FindVulkanCustom.cmake
include/: compiler_compat.h  glibc_compat.h  gxm_color_surface_c.h  gxm_constants.h  gxm_types.h  mutex.h  switch_overrides.h  vita2hos_types.h
include/uam/gxm/: color_surface.h
source/: gxm_color_surface_c.cpp  load.c  mutex.c
source/modules/: SceGxm.c
src/uam/gxm/: color_surface.cpp
